# fbs_stream

./: Cargo.toml  README.md  build.rs
schemas/: monster.fbs  schema.fbs
src/: lib.rs
