[package]
name = "fbs_stream"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.0"
flatbuffers = "=25.2.10"
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["full"] }

[build-dependencies]
flatbuffers-build = "0.2"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"
